<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy1_msg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gjkjw_030@naver.com">parallels</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidil_dafault_generators<buildtool_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosid1_default_runtime</exec_depend>

  <member_of_group>rosidil_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
